--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -2,11 +2,26 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Portal de notícias</title>
+			<title>Noticia</title>
 		</head>
 	<body>
 
-		<h1>Notícia</h1>
+		<h1>Noticias</h1>
+
+		<table>
+				<tr>
+						<td>ID</td>
+						<td>Titulo</td>
+						<td>Noticia</td>
+				</tr>
+
+						<tr>
+								<td><%= noticia[0].id_noticia%></td>
+								<td><%= noticia[0].titulo %></td>
+								<td><%= noticia[0].noticia %></td>
+						</tr>
+		</table>
+
 
 	</body>
 </html>
